--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,14 +10,14 @@
   <body>
     <div class="container">
       <h2>Login</h2>
-      <form id="loginForm">
+      <form id="loginForm" th:action="@{/login}" method="post">
         <div class="input-group">
-          <label for="username">Username:</label>
-          <input type="text" id="username" required />
+          <label for="nome">nome:</label>
+          <input type="text" id="nome"  name="nome" required />
         </div>
         <div class="input-group">
-          <label for="password">Password:</label>
-          <input type="password" id="password" required />
+          <label for="senha">senha:</label>
+          <input type="senha" id="senha" name="senha" required />
         </div>
         <div class="button-container">
           <button type="submit">Login</button>
@@ -25,12 +25,6 @@
       </form>
     </div>
     <script>
-      document
-        .getElementById("loginForm")
-        .addEventListener("submit", function (e) {
-          e.preventDefault();
-          window.location.href = "home.html";
-        });
     </script>
   </body>
 </html>
