--- a/src/main/resources/static/css/stylesupdated.css
+++ b/src/main/resources/static/css/stylesupdated.css
@@ -102,10 +102,29 @@ p {
 #alterEntry {
   background: orange;
 }
+a{
+    color: black;
+    text-decoration: none;
+}
+#aButton {
+  padding: 4%;
+  border: none;
+  background: blue;
+  color: white;
+  cursor: pointer;
+  font-size: 100%; 
+  text-decoration: none; 
+}
 
-a {
-  color: black;
-  text-decoration: none; /* no underline */
+#aButtonStart {
+  padding: 4%;
+  border: none;
+  background: blue;
+  color: white;
+  cursor: pointer;
+  font-size: 100%; 
+  text-decoration: none; 
+  justify-content: flex-start;
 }
 
 .hide {
